syntax = "proto3";

package com.github.bredtape.gateway.nats_sync.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bredtape/gateway/sync/v1";


// nats sync service, to initiate sync of a stream from one deployment to another.
// To bootstrap the NatsSyncService itself, all deployments must have the
// StartSync requests published to their designated nats stream for this service
// (which matches either the source or sink deployment)
service NatsSyncService {
  // Start sync'ing a stream from one deployment to another.
  // Only one sync operation can be active pr combination of source_deployment, source_stream_name and sink_deployment
  // You cannot change the parameters of the sync operation,  but must send a StopSync,
  // then a new StartSync
  rpc StartSync(StartSyncRequest) returns (StartSyncResponse);

  // Stop sync of a stream. See note on StartSync
  rpc StopSync(StopSyncRequest) returns (StopSyncResponse);
}

message StartSyncRequest {
  // the deployment to sync from
  string source_deployment = 1;

  // the sink deployment, where the messages are to be published.
  string sink_deployment = 2;

  // source stream name. The stream could be mapped at the sink to whatever is needed.
  string source_stream_name = 3;

  // subscription filters used at the source for this stream
  repeated string filter_subjects = 4;

  ConsumerConfig consumer_config = 5;
}

message StartSyncResponse {
  // the deployment to sync from
  string source_deployment = 1;

  // the deployment the messages are to be published
  string sink_deployment = 2;

  // source stream name
  string source_stream_name = 3;

  // subscription filters used at the source for this stream
  repeated string filter_subjects = 4;

  ConsumerConfig consumer_config = 5;
}

message StopSyncRequest {
  // the deployment to unsubscribe from
  string source_deployment = 1;

  // the deployment the messages are to be published
  string sink_deployment = 2;

  // source stream name
  string source_stream_name = 3;

  // subscription filters used at the source for this stream
  repeated string filter_subjects = 4;
}

message StopSyncResponse {
  // the deployment where sync was requested from
  string source_deployment = 1;

  // the deployment where sync was requested to
  string sink_deployment = 2;

  // source stream name
  string source_stream_name = 3;

  // set of filters used at the source for this stream
  repeated string filter_subjects = 4;
}

// ConsumerConfig defines the configuration for message consumption
message ConsumerConfig {
  // DeliverPolicy determines how messages are delivered from the source deployment.
  // It's used on initial subscription and when gaps are detected between source and sink.
  DeliverPolicy deliver_policy = 1;

  // OptStartSeq specifies the starting sequence number when deliver_policy is DELIVER_POLICY_BY_START_SEQUENCE.
  uint64 opt_start_seq = 2;

  // OptStartTime specifies the starting time when deliver_policy is DELIVER_POLICY_BY_START_TIME.
  google.protobuf.Timestamp opt_start_time = 3;
}

enum DeliverPolicy {
  // DeliverAllPolicy starts delivering messages from the very beginning of a
	// stream. This is the default.
	DELIVER_POLICY_ALL = 0;

	// DeliverLastPolicy will start the consumer with the last sequence
	// received.
  DELIVER_POLICY_LAST = 1;

	// DeliverNewPolicy will only deliver new messages that are sent after the
	// consumer is created.
	DELIVER_POLICY_NEW = 2;

	// DeliverByStartSequencePolicy will deliver messages starting from a given
	// sequence configured with OptStartSeq in ConsumerConfig.
	DELIVER_POLICY_BY_START_SEQUENCE = 3;

	// DeliverByStartTimePolicy will deliver messages starting from a given time
	// configured with OptStartTime in ConsumerConfig.
	DELIVER_POLICY_BY_START_TIME = 4;

	// DeliverLastPerSubjectPolicy is not implemented, because it will require
  // the source to signal when each message per subject have been received
}

// to mirror nats Msg (https://github.com/nats-io/nats.go/blob/main/nats.go)
message Msg {
  string subject = 1;

  // headers. Separate multiple values with ','. The values must not contain a ,
  map<string, string> headers = 2;

  bytes data = 3;

  // metadata fields

  // source sequence
  uint64 sequence = 4;

  // when the Msg was published to the source.
  google.protobuf.Timestamp published_timestamp = 5;
}

// messages belonging to the same deployment, source stream and subscription
message Msgs {
  // set id, a unique uuid per set of messages
  // This is needed because old irrelevant messages may be delivered, and
  // must be ignored
  string set_id = 1;

  // source deployment
  string source_deployment = 2;

  // sink deployment
  string sink_deployment = 3;

  // source stream name
  string source_stream_name = 4;

  // subscription filters used at the source for this stream.
  repeated string filter_subjects = 5;

  ConsumerConfig consumer_config = 6;

  // the sequence before this. Will be 0 if this is the first
  // batch for the subscription (or the subscription has been restarted)
  uint64 last_sequence = 7;

  // messages matching the stream name and subject filters.
  // Ordered by sequence. May be empty. May have gaps in sequence.
  repeated Msg messages = 8;
}

// acknowledge combination of stream name, subject and sequence
message Acknowledge {
  // set id, matching Msgs
  string set_id = 1;

  string source_stream_name = 2;

  // source sequence number from (inclusive)
  uint64 sequence_from = 3;

  // source seqeuence number to (inclusive)
  uint64 sequence_to = 4;

  // to indicate not-acknowledge, in which case the subscription will be restarted.
  // If sequence_from is set, the subscription will resume from that sequence.
  // Duplicates must be acknowledged
  bool is_nak = 5;

  // reason, should be specified when NAK
  // possible scenarios: message loss/corrupted, message missing (gap,
  // have received newer but is missing some), rejected (because subscription is
  // not active at the sink deployment, or a conflicting subscription is active)
  string reason = 6;
}

// message batch. Used for lower level exchange between deployments using other means of transport than nats
message MessageBatch {
  string to_deployment = 1;
  string from_deployment = 2;

  // timestamp of when this message has been sent
  // used to estimate latency between deployments.
  // In seconds since Unix epoch
  google.protobuf.Timestamp sent_timestamp = 3;

  repeated Acknowledge acknowledges = 4;
  repeated Msgs list_of_messages = 5;
}

